fix : add new endpoint
